# OpenGL-driving-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: _fixes.hpp.59DE65728F234AFC.idx  _vectorize.hpp.FD5BDB850E7CB3CC.idx  barrierPath.cpp.E83AD7FAA8FECF21.idx  barrierPath.hpp.1978D00F600054A2.idx  camera.cpp.26B814F040DB8651.idx  camera.hpp.A6998A7A7E72B75C.idx  car.cpp.098EECA01F83259C.idx  car.hpp.8B4E9933AD044D3A.idx  common.hpp.8111870F0C18D595.idx  component_wise.hpp.7F37CADCF736E83C.idx  component_wise.inl.FA2C3405EBEBAFEC.idx  compute_common.hpp.A5EDACE03D986C0F.idx  compute_vector_decl.hpp.566AED54D82C0B3C.idx  compute_vector_relational.hpp.60018B09E8C42901.idx  constants.hpp.207455DF1C265EAF.idx  constants.inl.7849E09B40225835.idx  cubemap.cpp.4DC508915575310B.idx  cubemap.hpp.F56E00416464EE33.idx  epsilon.hpp.876CB237F24F24F7.idx  epsilon.inl.0F7E60D2C2C5A9DF.idx  exponential.hpp.AB1729C7A8D90ACB.idx  func_common.inl.0A7BC509E3C0786F.idx  func_exponential.inl.9388C765C1B08067.idx  func_geometric.inl.8E54A8807DD28174.idx  func_integer.inl.9C26DC9CEDF71BAB.idx  func_matrix.inl.D10FD1EFEE92782B.idx  func_packing.inl.64A5CDB89110B930.idx  func_trigonometric.inl.EFD540956ABA7BB2.idx  func_vector_relational.inl.5AE30CE7C92BB793.idx  fwd.hpp.A28A15FACEFE217C.idx  geometric.hpp.B94D8CA43BCD7174.idx  glad.c.D7251B2FC47C0D7D.idx  glad.h.5535113F67E476DE.idx  glm.hpp.FA342DE46BB6F35A.idx  integer.hpp.350825EECF6C8A31.idx  khrplatform.h.7EAD7EF539ED0646.idx  main.cpp.10F2E9970616E944.idx  mat2x2.hpp.FD7E9D77BFC5A9A8.idx  mat2x3.hpp.7E077C12EE683A17.idx  mat2x4.hpp.4D1F1A94E89FC016.idx  (+183 more)
assets/Barrier/: barrier.mtl  barrierLowPoly.mtl
assets/Barrier/Model2/: barrierModel.mtl
assets/Car/: car.mtl  carBody.mtl  carBodyModel.mtl  wheel.mtl  wheelModel.mtl
assets/Grass/: grassBladeB.mtl
assets/RoadSign/: roadSign.mtl  roadSignTest.mtl
lib/: stb_image.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: barrier.vert  barrierPath.cpp  barrierPath.hpp  camera.cpp  camera.hpp  car.cpp  car.hpp  collisionBox.frag  cubemap.cpp  cubemap.frag  cubemap.hpp  cubemap.vert  grass.cpp  grass.hpp  main.cpp  model.cpp  model.frag  model.hpp  model.vert  modelTexture.frag  noiseMultipliers.hpp  perlinNoise.cpp  perlinNoise.hpp  physics.cpp  physics.hpp  resourceManagement.cpp  resourceManagement.hpp  roadPath.cpp  roadPath.hpp  roadSigns.cpp  roadSigns.hpp  shader.cpp  shader.hpp  spline.cpp  spline.hpp  terrain.cpp  terrain.frag  terrain.hpp  terrain.vert  terrainDebug.frag  (+7 more)
src/Shaders/: collisionBox.frag  collisionBox.vert  grass.vert  grassModel.vert  instanceModel.frag  modelTexture.frag  modelTexture.vert  terrain.vert
